Fix T78038: Cycles crash rendering with volume object and motion blur